charset in contentType used in Blob.prototype.slice(start, end, contentType) is lost https://bugs.webkit.org/show_bug.cgi?id=225057

Patch by Alex Christensen <achristensen@webkit.org> on 2021-04-27
Reviewed by Chris Dumez.

Source/WebCore:

When calling Blob.slice, use the content type from the call, not from the sliced-from blob.
This matches Chrome and Firefox.

When no content type is given, browsers disagree on what happens, so keep existing behavior in that case.

Test: fast/files/blob-content-type.html

* fileapi/Blob.cpp:
(WebCore::Blob::Blob):
* fileapi/ThreadableBlobRegistry.cpp:
(WebCore::ThreadableBlobRegistry::registerBlobURLForSlice):
* fileapi/ThreadableBlobRegistry.h:
* platform/network/BlobRegistry.h:
* platform/network/BlobRegistryImpl.cpp:
(WebCore::BlobRegistryImpl::registerBlobURLForSlice):
* platform/network/BlobRegistryImpl.h:

Source/WebKit:

* NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::NetworkConnectionToWebProcess::registerBlobURLForSlice):
* NetworkProcess/NetworkConnectionToWebProcess.h:
* NetworkProcess/NetworkConnectionToWebProcess.messages.in:
* NetworkProcess/NetworkProcessPlatformStrategies.cpp:
(WebKit::NetworkProcessPlatformStrategies::createBlobRegistry):
* WebProcess/FileAPI/BlobRegistryProxy.cpp:
(WebKit::BlobRegistryProxy::registerBlobURLForSlice):
* WebProcess/FileAPI/BlobRegistryProxy.h:

Source/WebKitLegacy/mac:

* WebCoreSupport/WebPlatformStrategies.mm:

Source/WebKitLegacy/win:

* WebCoreSupport/WebPlatformStrategies.cpp:

LayoutTests:

* fast/files/blob-content-type-expected.txt: Added.
* fast/files/blob-content-type.html: Added.

Canonical link: https://commits.webkit.org/237094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276677 268f45cc-cd09-0410-ab3c-d52691b4dbfc